--- a/style.css
+++ b/style.css
@@ -2,14 +2,17 @@
     margin: 0;
     padding: 0;
 }
+h1{
+    text-align: center;
+}
 .fundo{
-    background-image: linear-gradient (45deg,lightskyblue,mediumaquamarine);
+    background-image: linear-gradient(45deg,lightskyblue,mediumaquamarine);
     height: 100vh; cole: white;
     font-family: Arial, Helvetica, sans-serif;
 }
     .calculadora{
     position: absolute;
-    background-color:rgb(255, 157, 171);
+    background-color: #008080;
     top: 50%;
     left: 50%; 
     transform: translate(-50%, -50%);
@@ -24,10 +27,10 @@
    cursor: pointer;
    background-color: lightyellow;
    border: none;
-   color: maroon;
+   color: lightskyblue;
 }
 .botao:hover{
-    background-color: maroon;
+    background-color:#ADD8E6;
 }
 
 #resultado{
