--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,12 @@ h1{
     text-align: center;
 }
 .fundo{
-    background-image: linear-gradient(45deg,lightskyblue,mediumaquamarine);
-    height: 100vh; cole: white;
+    background-color:mediumaquamarine;
+    height: 100vh; 
+    color: white;
     font-family: Arial, Helvetica, sans-serif;
 }
-    .calculadora{
+.calculadora{
     position: absolute;
     background-color: #008080;
     top: 50%;
@@ -25,9 +26,10 @@ h1{
    height: 50px;
    font-size: 25px;
    cursor: pointer;
-   background-color: lightyellow;
+   background-color: white;
    border: none;
    color: lightskyblue;
+   border-radius: 15px;
 }
 .botao:hover{
     background-color:#ADD8E6;
@@ -42,4 +44,5 @@ h1{
     color: black;
     text-align: right;
     padding: 5px;
+    border-radius: 15px;
 }
